--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
 
             <!--PC用ナビゲーション-->
             <nav id="nav-pc">
-                <a href="mission.html">MISSION</a>
-                <a href="product.html">PRODUCT</a>
-                <a href="index.html#aboutus">ABOUT US</a>
-                <a href="index.html#vision">VISION</a>
-                <a href="index.html#company">COMPANY</a>
-                <a href="index.html#company">CONTACT</a>
+                <ul>
+                <li><a href="mission.html">MISSION</a></li>
+                <li><a href="product.html">PRODUCT</a></li>
+                <li><a href="index.html#aboutus">ABOUT US</a></li>
+                <li><a href="index.html#vision">VISION</a></li>
+                <li><a href="index.html#company">COMPANY</a></li>
+                <li><a href="index.html#company">CONTACT</a></li>
+                </ul>
             </nav>
         </header>
     </body>
