--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                 <td>
                                     <!--空のセル-->
                                 </td>
-                                <td class="culture-description">クオーター毎に経営・部署・個人ごとにOKRを設定し個人のキャリアと会社の目指す方向の軌道修正を行っております。</td>
+                                <p class="culture-description">クオーター毎に経営・部署・個人ごとにOKRを設定し個人のキャリアと会社の目指す方向の軌道修正を行っております。</p></td>
                             </tr>
                         </table>
                         <img class="culture-img" src="images/index/index-aboutus1.png" alt="笑顔で話し合う2人の女性">
